:wrench: Fix: Product label wrapping fixed

--- a/scss/pages/_page-product.scss
+++ b/scss/pages/_page-product.scss
@@ -15,6 +15,7 @@
 
   .product-images {
     padding: 0;
+    margin-bottom: 0;
 
     .product-image-wrap {
       padding: 0;
