--- a/scss/pages/_page-shop.scss
+++ b/scss/pages/_page-shop.scss
@@ -3,3 +3,7 @@
     display: none;
   }
 }
+
+.product-labels {
+  max-width: unset;
+}
